# bike-cal-agent-skill

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/pnw-bike-events-promote/: SKILL.md
.agents/skills/pnw-bike-events-promote/agents/: openai.yaml
.agents/skills/pnw-bike-events-promote/references/: promotion-policy.md
.agents/skills/pnw-bike-events-promote/scripts/: promote_events.py
.agents/skills/pnw-bike-events-sync/: SKILL.md
.agents/skills/pnw-bike-events-sync/agents/: openai.yaml
.agents/skills/pnw-bike-events-sync/references/: event-policy.md  source-registry.md
.agents/skills/pnw-bike-events-sync/scripts/: apply_batch.py  build_seed_catalog.py  dedupe_calendar.py  fetch_cascade_major_rides.py  fetch_cyclocross_series.py  fetch_mountain_classics.py  fetch_obra_oregon.py  fetch_ride_vicious.py  fetch_sticky_bidon_raceways.py  fetch_wider_pnw_marquee.py  reconcile_batch.py
src/pnw_bike_events/: __init__.py  calendar_cli.py  cascade.py  cyclocross_series.py  dedupe.py  diffing.py  models.py  mountain_classics.py  normalize.py  obra_oregon.py  promotion.py  registry.py  ride_vicious.py  seed.py  sticky_bidon.py  wider_pnw.py
tests/: test_cascade.py  test_cyclocross_series.py  test_dedupe.py  test_diffing.py  test_mountain_classics.py  test_obra_oregon.py  test_promotion.py  test_registry.py  test_ride_vicious.py  test_sticky_bidon.py  test_wider_pnw.py
tests/fixtures/: ride_vicious_2026.json
