[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pnw-bike-events"
version = "0.1.0"
description = "Shared tooling for Codex skills that reconcile and promote Pacific Northwest bike events."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "hatchling>=1.27,<2",
  "pytest>=8.3,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pnw_bike_events"]

[tool.hatch.build]
exclude = [
  ".serena",
  ".uv-cache",
  ".venv",
  "build",
  "dist",
  "reports",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
